Added experiments for spread

--- a/molmo/Different_Temperatures.ipynb
+++ b/molmo/Different_Temperatures.ipynb
@@ -338,9 +338,10 @@
     "    for i in range(len(tasks)):\n",
     "        task = tasks[i]\n",
     "        objects_of_task = objects[i]\n",
+    "        object = \" The releveant object is: \" + objects_of_task[0] + \" \"\n",
     "        ground_truth = ground_truths[i]\n",
-    "        prompt_what = prompt_starts[0] + task + prompt_ends[0]\n",
-    "        prompt_where = prompt_starts[1] + task + prompt_ends[1]\n",
+    "        prompt_what = prompt_starts[0] + task + object + prompt_ends[0]\n",
+    "        prompt_where = prompt_starts[1] + task + object + prompt_ends[1]\n",
     "        print(f\"Task: {task}\")\n",
     "        object = \"\"\n",
     "    \n",
