--- a/molmo/Prompts_Tests.ipynb
+++ b/molmo/Prompts_Tests.ipynb
@@ -239,6 +239,7 @@
     }
    ],
    "source": [
+    "# Iterative Verbesserungsversuche\n",
     "experiment_path = \"../data/base_experiments\"\n",
     "num_runs = 5\n",
     "\n",
@@ -475,6 +476,7 @@
     }
    ],
    "source": [
+    "# ChatGPT Versuche\n",
     "experiment_path = \"../data/base_experiments\"\n",
     "num_runs = 5\n",
     "\n",
@@ -789,6 +791,7 @@
     }
    ],
    "source": [
+    "# ChatGPT Versuche\n",
     "experiment_path = \"../data/base_experiments\"\n",
     "num_runs = 5\n",
     "\n",
