Added molmo experiments for different temperatures with different prompts

--- a/molmo/ROC_curve.ipynb
+++ b/molmo/ROC_curve.ipynb
@@ -372,7 +372,6 @@
     "plot_roc_curve(fpr, tpr, roc_auc)\n",
     "j_scores = tpr - fpr\n",
     "best_idx = np.argmax(j_scores)\n",
-    "print(thresholds)\n",
     "print(thresholds[best_idx])\n",
     "\n",
     "fpr, tpr, roc_auc, thresholds = calculate_roc_curve(distances[0], 0.1, spreads_0)\n",
@@ -446,7 +445,9 @@
     "\n",
     "fpr, tpr, roc_auc, thresholds = calculate_roc_curve(distances[0] + distances[1], 0.1, dias)\n",
     "plot_roc_curve(fpr, tpr, roc_auc)\n",
-    "print(thresholds)"
+    "j_scores = tpr - fpr\n",
+    "best_idx = np.argmax(j_scores)\n",
+    "print(1 - thresholds[best_idx])"
    ]
   },
   {
