--- a/molmo/VQA_test.ipynb
+++ b/molmo/VQA_test.ipynb
@@ -10,13 +10,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-04 16:28:35.148332: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-03-04 16:28:35.916005: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-03-04 16:28:35.916046: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-03-04 16:28:35.916076: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-03-04 16:28:36.014687: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-03-07 16:08:34.326742: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-03-07 16:08:34.369424: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-03-07 16:08:34.369455: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-03-07 16:08:34.369478: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-03-07 16:08:34.386571: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-03-04 16:28:58.746264: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-03-07 16:08:36.868870: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "377c3dc38b88405197149702ee8c15dd",
+       "model_id": "a0daad9e50eb44c3abce8bc7ec90b0ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,8 +169,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "e4229243-08ef-49e9-99c9-a5f021e67063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "import torch\n",
+    "\n",
+    "def create_vqa_prompt(coordinates, task, width, height):\n",
+    "    choices = list(string.ascii_lowercase)\n",
+    "    prompt_coordinates = \"\"\n",
+    "    for i in range(len(coordinates)):\n",
+    "        prompt_coordinates += f\"{choices[i]}: {coordinates[i]}, \"\n",
+    "\n",
+    "    \n",
+    "    prompt_start = \"You are an expert in selecting the best answer in a multiple choice question style for succeeding in the specific task: \"\n",
+    "    prompt_middle = f\". There are {len(coordinates)} different answers containing coordinates from which you have to choose the most relevant one to succeed in the task. The width of the image is {width} pixels and the height of the image is {height} pixels. The multiple choice answers from which you have to choose are the following: \"\n",
+    "    \n",
+    "    prompt_end = \" Your output format should be only the letter of the answer that is the most likely. Do not use whitespace before or after the letter. Do not output anything else!\"\n",
+    "    return prompt_start + task + prompt_middle + prompt_coordinates + prompt_end\n",
+    "\n",
+    "def get_top_probability_distribution(output_char, output_tokens, tokenizer, top_k=10):\n",
+    "    softmax_fn = torch.nn.Softmax(dim=-1)\n",
+    "\n",
+    "    logits = output.logits\n",
+    "    generated_logits = torch.cat(logits, dim=0)\n",
+    "    generated_tokens = output.sequences[0, inputs['input_ids'].size(1):]\n",
+    "    \n",
+    "    answer_token = generated_tokens[0]\n",
+    "    answer_logits = generated_logits[0]\n",
+    "    \n",
+    "    probs = softmax_fn(answer_logits.squeeze(0))\n",
+    "    \n",
+    "    token_prob = probs[answer_token].item()\n",
+    "    \n",
+    "    top_probs, top_indices = torch.topk(probs, top_k)\n",
+    "    top_tokens = [(tokenizer.decode([idx]), top_probs[i].item()) for i, idx in enumerate(top_indices)]\n",
+    "\n",
+    "    return token_prob, top_tokens\n",
+    "\n",
+    "def do_vqa(coordinates, task, image_path, temperature):\n",
+    "    with Image.open(image_path) as image:\n",
+    "        width = image.width\n",
+    "        height = image.height\n",
+    "        prompt = create_vqa_prompt(coordinates, task, width, height)\n",
+    "        print(f\"Prompt: {prompt}\")\n",
+    "        output_text, output, inputs = do_inference(image, prompt, model, processor, temperature)\n",
+    "    return output_text, output, inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1aa0c28d-8b2b-497e-9957-7ad1d72a30df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt: You are an expert in selecting the best answer in a multiple choice question style for succeeding in the specific task: pick up vegetable and put it on the table.. There are 3 different answers containing coordinates from which you have to choose the most relevant one to succeed in the task. The width of the image is 640 pixels and the height of the image is 480 pixels. The multiple choice answers from which you have to choose are the following: a: (280, 270), b: (450, 350), c: (200, 215),  Your output format should be only the letter of the answer that is the most likely. Do not use whitespace before or after the letter. Do not output anything else!\n",
+      "Token_prob: 0.4975808560848236\n",
+      " c: 0.4976\n",
+      " a: 0.2919\n",
+      " b: 0.1709\n",
+      " d: 0.0222\n",
+      " A: 0.0045\n",
+      " C: 0.0032\n",
+      " B: 0.0027\n",
+      " D: 0.0014\n",
+      " letter: 0.0007\n",
+      " f: 0.0005\n",
+      " Output:  c\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ' c'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 22\u001b[0m\n\u001b[1;32m     20\u001b[0m output \u001b[38;5;241m=\u001b[39m output_text\u001b[38;5;241m.\u001b[39mstrip()  \u001b[38;5;66;03m# Remove extra whitespace\u001b[39;00m\n\u001b[1;32m     21\u001b[0m output \u001b[38;5;241m=\u001b[39m output_text\u001b[38;5;241m.\u001b[39mstrip(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m()\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# Remove surrounding parentheses\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m x, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, output_text\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m))  \u001b[38;5;66;03m# Convert to integers\u001b[39;00m\n\u001b[1;32m     23\u001b[0m output \u001b[38;5;241m=\u001b[39m (x, y) \n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Image\u001b[38;5;241m.\u001b[39mopen(image_path) \u001b[38;5;28;01mas\u001b[39;00m image:\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ' c'"
+     ]
+    }
+   ],
+   "source": [
+    "#task8 - can - (130,250) (380, 200) / (500, 300) (300, 350)\n",
+    "#task2 - vegetable (280, 270) (110, 90) (550, 200) / (205, 100) (450, 350) (200, 215)\n",
+    "\n",
+    "tasks, images, groundtruths, objects_list = extract_all(\"../data/uncertain_experiments\")\n",
+    "for i in range(len(tasks)):\n",
+    "    task = tasks[i]\n",
+    "    image_path = images[i]\n",
+    "    if(\"task2\" in image_path):\n",
+    "        coordinates = [(280, 270), (450, 350), (200, 215)]\n",
+    "        output_text, output, inputs = do_vqa(coordinates, task, image_path, 0.2)\n",
+    "        \n",
+    "        token_prob, top_tokens= get_top_probability_distribution(output_text, output, processor.tokenizer)\n",
+    "        print(f\"Token_prob: {token_prob}\")\n",
+    "        for token, prob in top_tokens:\n",
+    "            print(f\"{token}: {prob:.4f}\")\n",
+    "        print(f\" Output: {output_text}\")\n",
+    "    else:\n",
+    "        continue\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16e2370b-d33f-4feb-9a7a-81b3bdac462f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -178,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aa0c28d-8b2b-497e-9957-7ad1d72a30df",
+   "id": "7924bdcb-09e3-47b1-a9eb-c1a4de8ec415",
    "metadata": {},
    "outputs": [],
    "source": []
