Added scatter and roc experiment and added methods for cluster scatter roc experiment

--- a/molmo/Molmo_Report_Scatter_ROC_Experiment.ipynb
+++ b/molmo/Molmo_Report_Scatter_ROC_Experiment.ipynb
@@ -145,6 +145,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "bebbf168-598a-409a-a3a0-6b886a63200d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_spread_and_prob_experiment_cluster(path_to_experiments, prompt_starts, runs_per_task, temperature, epsilon, min_samples):\n",
+    "    tasks, images, ground_truths, objects = extract_all(path_to_experiments)\n",
+    "    prompt_end = \" Your output format should be like this: (x1, y1) with (x1, y1) beeing the coordinates of the relevant object. Dont output anything else.\"\n",
+    "    softmax_fn = torch.nn.Softmax(dim=-1)\n",
+    "    labels = []\n",
+    "\n",
+    "    coordinates = [[],[]]\n",
+    "\n",
+    "    distances = [[],[]]\n",
+    "    \n",
+    "    spreads = [[],[]]\n",
+    "\n",
+    "    diameters = [[],[]]\n",
+    "\n",
+    "    majority_size_rates = [[],[]]\n",
+    "\n",
+    "\n",
+    "    probs = [[],[]]\n",
+    "    \n",
+    "    for i in range(len(tasks)):\n",
+    "        prompts = []\n",
+    "        task = tasks[i]\n",
+    "        labels.append(task)\n",
+    "        ground_truth = ground_truths[i]\n",
+    "\n",
+    "        objects_of_task = objects[i]\n",
+    "        prompts_what = []\n",
+    "        for prompt_start in prompt_starts:\n",
+    "            prompt = prompt_start + task + \"For that you have to point to the object in the picture that has to be moved.\" + prompt_end\n",
+    "            prompts_what.append(prompt)\n",
+    "\n",
+    "        prompts.append(prompts_what)\n",
+    "\n",
+    "\n",
+    "        print(f\"{task}\")\n",
+    "        with Image.open(images[i]) as image:\n",
+    "            image_width = image.width\n",
+    "            image_height = image.height\n",
+    "    \n",
+    "            if (len(ground_truth) == 2):\n",
+    "                prompts_where = []\n",
+    "                for prompt_start in prompt_starts:\n",
+    "                    prompt = prompt_start + task + \"For that you have to point to the place in the picture where the object has to be moved to.\" +  prompt_end\n",
+    "                    prompts_where.append(prompt)\n",
+    "                labels.append(task)\n",
+    "                prompts.append(prompts_where)\n",
+    "    \n",
+    "            for k in range(len(prompts)):\n",
+    "                task_coordinates = []\n",
+    "                task_distances = []\n",
+    "                probabilities = []\n",
+    "\n",
+    "                for prompt in prompts[k]:\n",
+    "                    for j in range(runs_per_task):\n",
+    "                        output_text, output, inputs = do_inference(image, prompt, model, processor, temperature)                    \n",
+    "                        coords = get_coordinates(output_text, image_width, image_height)\n",
+    "                        if(coords[0] < 0 or coords[0] < 0):\n",
+    "                            continue\n",
+    "                        \n",
+    "                        norm_dist = calculate_normalized_euclidian_distance(coords, ground_truth[k], image_width, image_height)\n",
+    "                        task_coordinates.append(coords)\n",
+    "                        task_distances.append(norm_dist)\n",
+    "                        probabilities.append(calculate_probability_of_coordinates(output, inputs, processor))\n",
+    "                    coordinates[k].append(task_coordinates)\n",
+    "\n",
+    "                n_clusters, index_majority_cluster, cluster_points, noisy_points, centroids, diameters_of_clusters = calculate_all_clusters(task_coordinates, epsilon=epsilon, min_samples=min_samples)\n",
+    "                if (n_clusters != 0):\n",
+    "                    probs[k].append(np.mean(probabilities))\n",
+    "                    distances[k].append(np.mean(task_distances))\n",
+    "                    spreads[k].append(calculate_spread(task_coordinates, image_width, image_height))\n",
+    "                    majority_size_rates[k].append(len(cluster_points[index_majority_cluster]) / len(task_coordinates))\n",
+    "                           \n",
+    "\n",
+    "    return labels, distances[0] + distances[1], spreads[0] + spreads[1], probs[0] + probs[1], majority_size_rates[0] + majority_size_rates[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "8f289734-2dd6-43c9-ac91-93a60b798995",
    "metadata": {},
@@ -191,16 +274,8 @@
     "#prompt_starts = [\"You are the robot in the picture. Your mission it to guide and support the user in its task to: \", \"You are the robot in the picture. Your mission it to guide and support the user in its task to: \"]\n",
     "#prompt_ends = [, \"  Your output format should be like this: (x1, y1) with (x1, y1) beeing the coordinates of the place where the object has to be moved to. Dont output anything else.\"]\n",
     "\n",
-    "labels, distances, spreads, probs = run_experiment_different_prompts(experiment_path, prompt_starts, num_runs, temperature, epsilon, min_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "a6613dd0-fec5-4e41-b94b-56cc32b3d94f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "labels, distances, spreads, probs = run_experiment_different_prompts(experiment_path, prompt_starts, num_runs, temperature, epsilon, min_samples)\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "np.savez(\n",
@@ -295,6 +370,45 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1daf2476-52b9-4e69-8366-4fc629749074",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_path = \"../data/certain_experiments\"\n",
+    "num_runs = 6\n",
+    "temperature = 0.8\n",
+    "\n",
+    "epsilon = 20\n",
+    "min_samples = 3\n",
+    "\n",
+    "prompt_starts = [\n",
+    "    \"You are the robot in the picture. Your mission it to guide and support the user in its task to: \",\n",
+    "    \"Your mission it to guide and support the user in its task to: \",\n",
+    "    \"You are the robot in the picture. You have to: \",\n",
+    "    \"You are the robot. Your mission is to: \",\n",
+    "    \"You are the robot in the picture. Your task is to: \"\n",
+    "    ]\n",
+    "\n",
+    "#prompt_starts = [\"You are the robot in the picture. Your mission it to guide and support the user in its task to: \", \"You are the robot in the picture. Your mission it to guide and support the user in its task to: \"]\n",
+    "#prompt_ends = [, \"  Your output format should be like this: (x1, y1) with (x1, y1) beeing the coordinates of the place where the object has to be moved to. Dont output anything else.\"]\n",
+    "\n",
+    "labels, distances, spreads, probs, majority_size_rates = run_spread_and_prob_experiment_cluster(experiment_path, prompt_starts, num_runs, temperature, epsilon, min_samples)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "np.savez(\n",
+    "    'results/molmo-temp1-5prompts-6runs-certain-cluster.npz', \n",
+    "    labels=labels,\n",
+    "    distances=distances, \n",
+    "    spreads=spreads,\n",
+    "    probs=probs,\n",
+    "    majority_size_rates=majority_size_rates\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a28946e4-b18f-4835-99ff-3f367f28e2b2",
    "metadata": {},
    "outputs": [],
    "source": []
